--- a/aws-nuke.yaml
+++ b/aws-nuke.yaml
@@ -34,11 +34,12 @@ jobs:
     
     steps:
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        vuses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: us-east-1
           role-session-name: GitHubActionsAWSNuke
+          role-duration-seconds: 3600
       
       - name: Get organization accounts
         id: get-accounts
