--- a/.github/workflows/aws-nuke.yaml
+++ b/.github/workflows/aws-nuke.yaml
@@ -33,6 +33,8 @@ env:
 jobs:
   test-auth:
     runs-on: ubuntu-latest
+    outputs:
+      target_accounts: ${{ steps.get-accounts.outputs.target_accounts }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
@@ -83,8 +85,6 @@ jobs:
           ACCOUNTS=$(echo "$ACCOUNTS" | tr ' ' ',' | tr -d '\n')
           echo "Final account list: $ACCOUNTS"
           echo "target_accounts=$ACCOUNTS" >> $GITHUB_OUTPUT
-          echo "::set-output name=target_accounts::$ACCOUNTS"
-          echo "target_accounts=$ACCOUNTS" >> $GITHUB_ENV
           echo "Accounts to be processed: $ACCOUNTS"
 
   aws-nuke:
@@ -101,10 +101,9 @@ jobs:
           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
             echo "DRY_RUN=${{ github.event.inputs.dry_run }}" >> $GITHUB_ENV
           else
+            echo "DRY_RUN=true" >> $GITHUB_ENV
+          fi
           echo "TARGET_ACCOUNTS=${{ needs.test-auth.outputs.target_accounts }}" >> $GITHUB_ENV
-          echo "TARGET_ACCOUNTS=${{ needs.test-auth.outputs.target_accounts }}" >> $GITHUB_ENV
-          echo "TARGET_ACCOUNTS=${{ needs.get-accounts.outputs.target_accounts }}" >> $GITHUB_ENV
-          export TARGET_ACCOUNTS=${{ needs.get-accounts.outputs.target_accounts }}
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
