--- a/.github/workflows/aws-nuke.yaml
+++ b/.github/workflows/aws-nuke.yaml
@@ -26,12 +26,20 @@ on:
         type: string
         required: false
         default: "772886489592"  # Management account
+      multiple_passes:
+        description: 'Perform multiple passes to handle dependencies'
+        type: boolean
+        default: true
+      pass_count:
+        description: 'Number of passes to perform if multiple passes is enabled'
+        type: number
+        default: 3
 
 env:
   AWS_REGION: 'us-east-1'
 
 jobs:
-  test-auth:
+  fetch-accounts:
     runs-on: ubuntu-latest
     outputs:
       target_accounts: ${{ steps.get-accounts.outputs.target_accounts }}
@@ -132,7 +140,7 @@ jobs:
   aws-nuke:
     name: Run AWS-Nuke
     runs-on: ubuntu-latest
-    needs: test-auth
+    needs: fetch-accounts
     
     steps:
       - name: Checkout code
@@ -142,10 +150,14 @@ jobs:
         run: |
           if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
             echo "DRY_RUN=${{ github.event.inputs.dry_run }}" >> $GITHUB_ENV
+            echo "MULTIPLE_PASSES=${{ github.event.inputs.multiple_passes }}" >> $GITHUB_ENV
+            echo "PASS_COUNT=${{ github.event.inputs.pass_count }}" >> $GITHUB_ENV
           else
             echo "DRY_RUN=true" >> $GITHUB_ENV
+            echo "MULTIPLE_PASSES=true" >> $GITHUB_ENV
+            echo "PASS_COUNT=3" >> $GITHUB_ENV
           fi
-          echo "TARGET_ACCOUNTS=${{ needs.test-auth.outputs.target_accounts }}" >> $GITHUB_ENV
+          echo "TARGET_ACCOUNTS=${{ needs.fetch-accounts.outputs.target_accounts }}" >> $GITHUB_ENV
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
@@ -163,53 +175,78 @@ jobs:
       
       - name: Create AWS-Nuke config
         run: |
-          # Get the target accounts as an array
-          IFS=',' read -ra ACCOUNT_ARRAY <<< "$TARGET_ACCOUNTS"
-          
-          cat > nuke-config.yaml <<EOL
+          cat > nuke-config.yaml <<'EOL'
           regions:
             - global
             - us-east-1
-            - us-east-2
-            - us-west-1
-            - us-west-2
-            - eu-west-1
-            - eu-central-1
-            - ap-southeast-1
-            - ap-southeast-2
-            - ap-northeast-1
-            - sa-east-1
+            # - us-east-2
+            # - us-west-1
+            # - us-west-2
+            # - eu-west-1
+            # - eu-central-1
+            # - ap-southeast-1
+            # - ap-southeast-2
+            # - ap-northeast-1
+            # - sa-east-1
           
           account-blocklist:
             - "772886489592"  # Management account
           
-          accounts:
-          EOL
+          # Specify resource order for proper dependency handling
+          prerun-order:
+            # Network cleanup order
+            - EC2RouteTableAssociation  # First remove route table associations
+            - EC2SubnetRouteTableAssociation
+            - EC2NetworkInterfaceAttachment
+            - EC2NetworkInterface
+            - EC2InternetGatewayAttachment
+            - EC2VPCGatewayAttachment
+            - EC2NATGateway
+            - EC2Route
+            - EC2SecurityGroup
+            - EC2Subnet
+            - EC2RouteTable
+            - EC2InternetGateway
+            - EC2VPC
+            - EC2DHCPOption
+            
+            # ELB and related resources
+            - ElasticLoadBalancingV2TargetGroup
+            - ElasticLoadBalancingV2LoadBalancer
+            - ElasticLoadBalancer
           
-          # Add each target account to the config
-          for ACCOUNT in "${ACCOUNT_ARRAY[@]}"; do
-            # Trim any whitespace
-            ACCOUNT=$(echo "$ACCOUNT" | tr -d ' \t\n\r')
-            if [ -n "$ACCOUNT" ] && [ "$ACCOUNT" != "772886489592" ]; then
-              cat >> nuke-config.yaml <<EOL
-            "$ACCOUNT":
-              filters:
-                IAMRole:
-                  - "OrganizationAccountAccessRole"
-                  - "AWSServiceRoleFor*"
-                IAMRolePolicyAttachment:
-                  - "role:OrganizationAccountAccessRole:*"
-                IAMPolicy:
-                  - "default"
-                CloudFormationStack:
-                  - "StackSet-AWS-Landing-Zone*"
-          EOL
-            fi
-          done
+          # accounts:
+          #   # This will apply to all accounts
+          #   "*":
+          #     filters:
+          #       # Exclude key roles and resources
+          #       IAMRole:
+          #         - "OrganizationAccountAccessRole"
+          #         - "AWSServiceRoleFor*"
+          #       IAMRolePolicyAttachment:
+          #         - "role:OrganizationAccountAccessRole:*"
+          #       IAMPolicy:
+          #         - "default"
+          #       CloudFormationStack:
+          #         - "StackSet-AWS-Landing-Zone*"
+          #       EC2SecurityGroup:
+          #         - property:GroupName=default
+          #       KMSAlias:
+          #         - property:AliasName=^alias/aws/.*
+              
+          #     # Special handling for default VPCs and other resources
+          #     prerun:
+          #       EC2VPC:
+          #         - "property:IsDefault=true":
+          #             config:
+          #               force-delete: true
+          #       EC2RouteTable:
+          #         - "property:Associations[*].Main=true":
+          #             config:
+          #               force-delete: true
           
-          # Add the resource types section
-          cat >> nuke-config.yaml <<EOL
           resource-types:
+            # Include resources to explicitly target
             targets:
               # EC2 & Compute Resources
               - EC2Instance
@@ -218,11 +255,15 @@ jobs:
               - EC2KeyPair
               - EC2SecurityGroup
               - EC2Address
+              - AutoScalingGroup
+              - LaunchConfiguration
+              - LaunchTemplate
               
-              # VPC & Networking Resources
+              # Network Resources
               - EC2VPC
               - EC2Subnet
               - EC2RouteTable
+              - EC2Route
               - EC2InternetGateway
               - EC2NatGateway
               - EC2EIP
@@ -236,6 +277,10 @@ jobs:
               - EC2TransitGateway
               - EC2TransitGatewayRouteTable
               - EC2TransitGatewayVpcAttachment
+              - EC2RouteTableAssociation
+              - EC2SubnetRouteTableAssociation
+              - EC2InternetGatewayAttachment
+              - EC2VPCGatewayAttachment
               
               # Load Balancing & DNS
               - ElasticLoadBalancer
@@ -284,17 +329,6 @@ jobs:
               
               # Deployment & Management
               - CloudFormationStack
-              - AutoScalingGroup
-              - LaunchConfiguration
-              - LaunchTemplate
-              
-              # Security & Identity
-              - KMSKey
-              - KMSAlias
-              - IAMGroup
-              - IAMGroupPolicy
-              - IAMGroupPolicyAttachment
-              - IAMPolicy
               
               # Application Services
               - ElasticBeanstalkApplication
@@ -312,12 +346,24 @@ jobs:
               - SecretsManagerSecret
               - SSMParameter
             
+            # Exclude resources we don't want to delete
             excludes:
+              # IAM resources (skip completely)
               - IAMUser
               - IAMUserPolicyAttachment
               - IAMUserAccessKey
+              - IAMGroup
+              - IAMGroupPolicy
+              - IAMGroupPolicyAttachment
               - IAMRole
+              - IAMRolePolicy
               - IAMRolePolicyAttachment
+              - IAMPolicy
+              - IAMInstanceProfile
+              
+              # Default/critical AWS resources
+              - KMSKey
+              - CloudTrail
           EOL
           
           # Print the config file for debugging
@@ -326,49 +372,53 @@ jobs:
       
       - name: Run AWS-Nuke
         run: |
-            # First, list accounts to nuke 
-            ACCOUNTS_TO_NUKE=$(echo "$TARGET_ACCOUNTS" | tr ',' ' ')
-            
-            if [ -z "$ACCOUNTS_TO_NUKE" ]; then
-              echo "No accounts to process. Exiting."
-              exit 0
-            fi
-            
-            # For each account, run AWS-Nuke
-            for ACCOUNT_ID in $ACCOUNTS_TO_NUKE; do
-              if [ "$ACCOUNT_ID" != "772886489592" ]; then
-                echo "Processing account: $ACCOUNT_ID"
+          # First, list accounts to nuke 
+          ACCOUNTS_TO_NUKE=$(echo "$TARGET_ACCOUNTS" | tr ',' ' ')
+          
+          if [ -z "$ACCOUNTS_TO_NUKE" ]; then
+            echo "No accounts to process. Exiting."
+            exit 0
+          fi
+          
+          # Determine pass count for multiple passes
+          if [ "$MULTIPLE_PASSES" == "true" ]; then
+            PASSES=$PASS_COUNT
+          else
+            PASSES=1
+          fi
+          
+          # For each account, run AWS-Nuke
+          for ACCOUNT_ID in $ACCOUNTS_TO_NUKE; do
+            if [ "$ACCOUNT_ID" != "772886489592" ]; then
+              echo "Processing account: $ACCOUNT_ID"
+              ROLE_ARN="arn:aws:iam::${ACCOUNT_ID}:role/OrganizationAccountAccessRole"
+              
+              # Perform multiple passes if enabled
+              for (( pass=1; pass<=PASSES; pass++ )); do
+                echo "Starting Pass $pass of $PASSES for account $ACCOUNT_ID"
                 
-                # Get temporary credentials using AWS Organizations
-                echo "Assuming OrganizationAccountAccessRole in account $ACCOUNT_ID"
-                CREDENTIALS=$(aws sts assume-role --role-arn "arn:aws:iam::${ACCOUNT_ID}:role/OrganizationAccountAccessRole" --role-session-name "AWSNukeSession" --query "Credentials" --output json)
+                # Base command
+                CMD="aws-nuke --config nuke-config.yaml --force --assume-role-arn $ROLE_ARN"
                 
-                if [ $? -eq 0 ]; then
-                  # Extract credentials
-                  export AWS_ACCESS_KEY_ID=$(echo $CREDENTIALS | jq -r '.AccessKeyId')
-                  export AWS_SECRET_ACCESS_KEY=$(echo $CREDENTIALS | jq -r '.SecretAccessKey')
-                  export AWS_SESSION_TOKEN=$(echo $CREDENTIALS | jq -r '.SessionToken')
-                  
-                  # Run AWS-Nuke with these credentials
-                  CMD="aws-nuke --config nuke-config.yaml --force"
-                  
-                  # Add dry-run flag
-                  if [ "$DRY_RUN" != "true" ]; then
-                    CMD="$CMD --no-dry-run"
-                  fi
-                  
-                  echo "Running command: $CMD"
-                  $CMD || echo "Failed for account $ACCOUNT_ID"
-                  
-                  # Reset credentials
-                  unset AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY AWS_SESSION_TOKEN
-                else
-                  echo "Failed to assume role in account $ACCOUNT_ID"
+                # Add dry-run flag if needed
+                if [ "$DRY_RUN" == "true" ]; then
+                  CMD="$CMD --dry-run"
                 fi
-              else
-                echo "Skipping management account $ACCOUNT_ID"
-              fi
-            done
+                
+                # Run AWS-Nuke
+                echo "Running command: $CMD"
+                $CMD || echo "Failed for account $ACCOUNT_ID on pass $pass"
+                
+                # Sleep between passes to avoid rate limiting
+                if [ $pass -lt $PASSES ]; then
+                  echo "Sleeping 30 seconds between passes..."
+                  sleep 30
+                fi
+              done
+            else
+              echo "Skipping management account $ACCOUNT_ID"
+            fi
+          done
       
       - name: Report Results
         if: always()
@@ -380,3 +430,4 @@ jobs:
             echo "Mode: Destructive"
           fi
           echo "Target Accounts: $TARGET_ACCOUNTS"
+          echo "Multiple Passes: $MULTIPLE_PASSES (Count: $PASS_COUNT)"
